<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/edit_forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/error_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/orbitron_regular"
            android:text="Example"
            android:textColor="@color/error_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_semibold"
            android:gravity="center"
            android:hint="@string/enter_your_username"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/error_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/orbitron_regular"
            android:text="Example"
            android:textColor="@color/error_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/identification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_semibold"
            android:gravity="center"
            android:hint="@string/two_factor_identification"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/error_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/orbitron_regular"
            android:text="Example"
            android:textColor="@color/error_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_semibold"
            android:gravity="center"
            android:hint="@string/third_factor_identification"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:backgroundTint="#297BDB"
            android:fontFamily="@font/orbitron_regular"
            android:gravity="center"
            android:text="@string/send_code"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColor"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/error_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/orbitron_regular"
            android:text="Example"
            android:textColor="@color/error_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_semibold"
            android:gravity="center"
            android:hint="@string/enter_your_password"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/error_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/orbitron_regular"
            android:text="Example"
            android:textColor="@color/error_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_semibold"
            android:gravity="center"
            android:hint="@string/repeat_password"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:backgroundTint="#297BDB"
            android:fontFamily="@font/orbitron_regular"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColor"
            android:textSize="24sp" />

    </LinearLayout>

</LinearLayout>